--- a/index.html
+++ b/index.html
@@ -172,7 +172,16 @@
         </div>
       </div>
 
-      <nav class="catnav" id="catNav"></nav>
+      
+      <div class="catpreview" id="catPreview">
+        <div class="catpreview-head">
+          <h3>Explorar por categoría</h3>
+          <p class="muted">Elegí una categoría para filtrar el catálogo.</p>
+        </div>
+        <div class="catpreview-grid" id="catPreviewGrid"></div>
+      </div>
+
+<nav class="catnav" id="catNav"></nav>
 
       <div class="catalog" id="catalogGroups"></div>
 
