Actualización del sitio EDEC 6-1-25 13:20

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#f6f1e7" />
+  <meta name="theme-color" content="#fbf7f0" />
 
   <title>Catálogo Boutique | Pedido por WhatsApp</title>
   <meta name="description" content="Catálogo online boutique: destacados, categorías, buscador y pedido por WhatsApp. Sin backend." />
 
   <meta property="og:title" content="Catálogo Boutique | Pedido por WhatsApp" />
   <meta property="og:description" content="Elegí productos, armá tu lista y pedí por WhatsApp. Simple, rápido y profesional." />
-  <meta property="og:image" content="https://iili.io/fjnJyAl.md.png" />
+  <meta property="og:image" content="https://iili.io/fO7mWjs.md.jpg" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
   <header class="topbar">
     <div class="wrap topbar-inner">
       <a class="brand" href="#top">
-        <img class="brand-logo" src="https://iili.io/fjnJyAl.md.png" alt="Logo" />
+        <img class="brand-logo" src="https://iili.io/fO7mWjs.md.jpg" alt="Logo" />
         <div class="brand-text">
           <strong id="brandName">Tu Emprendimiento</strong>
           <span>Catálogo boutique · Pedido por WhatsApp</span>
@@ -73,7 +73,7 @@
 
         <div class="hero-panel">
           <div class="panel-head">
-            <img class="panel-logo" src="https://iili.io/fjnJyAl.md.png" alt="Logo hero" />
+            <img class="panel-logo" src="https://iili.io/fO7mWjs.md.jpg" alt="Logo hero" />
             <div>
               <div class="panel-title">Datos opcionales</div>
               <div class="panel-sub">Para que tu pedido llegue más claro</div>
@@ -172,16 +172,7 @@
         </div>
       </div>
 
-      
-      <div class="catpreview" id="catPreview">
-        <div class="catpreview-head">
-          <h3>Explorar por categoría</h3>
-          <p class="muted">Elegí una categoría para filtrar el catálogo.</p>
-        </div>
-        <div class="catpreview-grid" id="catPreviewGrid"></div>
-      </div>
-
-<nav class="catnav" id="catNav"></nav>
+      <nav class="catnav" id="catNav"></nav>
 
       <div class="catalog" id="catalogGroups"></div>
 
